welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:8: error: not found: value marquer
  marquer()
  ^PictureMono1:12: error: not found: value marquer
  marquer()
  ^PictureMono1:16: error: not found: value marquer
  marquer()
  ^